--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,14 @@
             <artifactId>sshd-core</artifactId>
             <version>2.9.2</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.sshd/sshd-scp -->
+        <dependency>
+            <groupId>org.apache.sshd</groupId>
+            <artifactId>sshd-scp</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/net.i2p.crypto/eddsa -->
         <dependency>
             <groupId>net.i2p.crypto</groupId>
